<resources>
    <string name="app_name">Probo</string>

    <string name="sign_in_email_hint">Email</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_submit_button">SIGN IN</string>
    <string name="sign_in_sign_up_button">SIGN UP</string>
    <string name="sign_in_error_icon_description">Error icon</string>
    <string name="sign_in_error_empty_email">Please enter an email address.</string>
    <string name="sign_in_error_empty_password">Please enter a password.</string>
    <string name="sign_in_error_invalid_credentials">The credentials you have entered are not valid.</string>
    <string name="sign_in_error_no_user">The credentials you have entered are not correct.</string>
    <string name="sign_in_error_general">An error has occurred. Please try again later.</string>
    <string name="sign_in_progress">Loading your account.</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="sign_up_label">Sign up</string>
    <string name="sign_up_profile_image_description">Profile image</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_re_password_hint">Re-Enter Password</string>
    <string name="sign_up_name_hint">Name</string>
    <string name="sign_up_submit_button">SIGN UP</string>
    <string name="sign_up_back_button">GO BACK</string>
    <string name="sign_up_error_empty_email">Please enter an email address.</string>
    <string name="sign_up_error_empty_password">Please enter a password.</string>
    <string name="sign_up_error_incorrect_re_password">The passwords you have entered do not match.</string>
    <string name="sign_up_error_empty_name">Please enter your name.</string>
    <string name="sign_up_error_weak_password">The password you have entered is too weak.</string>
    <string name="sign_up_error_invalid_email">The email you have entered is not valid.</string>
    <string name="sign_up_error_user_exists">The email you have entered is already in use.</string>
    <string name="sign_up_error_general">An error has occurred. Please try again later.</string>
    <string name="sign_up_progress_creating">Creating your account.</string>
    <string name="sign_up_progress_uploading_profile_image">Uploading your profile image.</string>
    <string name="sign_up_progress_saving">Saving your details.</string>

    <string name="user_nav_home">Home</string>
    <string name="user_nav_profile">Profile</string>
    <string name="user_nav_notifications">Subscriptions</string>
    <string name="user_nav_feed">Feed</string>
    <string name="user_nav_settings">Settings</string>
    <string name="user_nav_account">Account</string>
    <string name="user_nav_preferences">Preferences</string>
    <string name="user_nav_sign_out">Sign out</string>

    <string name="action_title_news">News</string>
    <string name="action_title_profile">Profile</string>
    <string name="action_title_notifications">Subscriptions</string>
    <string name="action_title_feed">Feed</string>
    <string name="action_title_account">Account</string>

    <string name="account_profile_image_description">Profile image</string>
    <string name="account_email_hint">Email</string>
    <string name="account_name_hint">Name</string>
    <string name="account_title_hint">Title</string>
    <string name="account_submit_button">SAVE</string>
    <string name="account_error_empty_name">Please enter your name.</string>
    <string name="account_progress_uploading_profile_image">Uploading your profile image.</string>
    <string name="account_progress_saving">Saving.</string>
    <string name="account_error_general">An error has occurred. Please try again later.</string>

    <string name="dbname_news">news</string>
    <string name="news_fragment">News</string>

    <string name="article_heatmap_toggle_title">Annotations</string>
    <string name="article_menu_true">True</string>
    <string name="article_menu_false">False</string>
    <string name="article_add_annotation_error">An error has occurred. Please try again later.</string>

    <string name="annotation_input_title_fact">Fact</string>
    <string name="annotation_input_title_opinion">Opinion</string>
    <string name="annotation_input_true">True</string>
    <string name="annotation_input_false">False</string>
    <string name="annotation_input_biased">Disagree</string>
    <string name="annotation_input_unbiased">Agree</string>
    <string name="annotation_input_close_image_description">Close button</string>
    <string name="annotation_input_title_false_very">Why is this very false?</string>
    <string name="annotation_input_title_false">Why is this false?</string>
    <string name="annotation_input_title_false_somewhat">Why is this somewhat false?</string>
    <string name="annotation_input_title_biased_very">Why do you completely disagree?</string>
    <string name="annotation_input_title_biased">Why do you disagree?</string>
    <string name="annotation_input_title_biased_somewhat">Why do you somewhat disagree?</string>
    <string name="annotation_input_title_default_fact">Is this fact true or false?</string>
    <string name="annotation_input_title_default_opinion">Do you agree or disagree with this opinion?</string>
    <string name="annotation_input_title_true_somewhat">Why is this somewhat true?</string>
    <string name="annotation_input_title_true">Why is this true?</string>
    <string name="annotation_input_title_true_very">Why is this very true?</string>
    <string name="annotation_input_title_unbiased_somewhat">Why do you somewhat agree?</string>
    <string name="annotation_input_title_unbiased">Why do you agree?</string>
    <string name="annotation_input_title_unbiased_very">Why do you completely agree?</string>
    <string name="annotation_input_edit_text_hint">Enter your comment</string>
    <string name="annotation_input_source_hint">Enter your source</string>
    <string name="annotation_input_primary_source_text">I am a source in this article.</string>
    <string name="annotation_input_subscribe">Subscribe to new annotations on this sentence.</string>
    <string name="annotation_input_error_icon_description">Error icon</string>
    <string name="annotation_input_submit">SUBMIT</string>
    <string name="annotation_input_error_no_value_fact">Please indicate whether the fact is true or false.</string>
    <string name="annotation_input_error_no_value_opinion">Please indicate whether the opinion is unbiased or biased.</string>
    <string name="annotation_input_error_no_comment">Please enter your comment.</string>
    <string name="annotation_input_error_no_source">You must provide a source when annotating a fact.</string>
    <string name="annotation_input_error_already_submitted">You have already annotated this sentence.</string>
    <string name="annotation_input_error_general">An error has occurred. Please try again later.</string>
    <string name="annotation_input_progress">Saving.</string>

    <string name="annotation_card_profile">Profile</string>
    <string name="annotation_card_follow">Follow</string>
    <string name="annotation_card_unfollow">Unfollow</string>

    <string name="annotation_fragment_error_general">An error has occurred. Please try again later.</string>

    <string name="annotation_more_fragment_button">+%d MORE</string>

    <string name="notifications_empty_message">No annotations were found.</string>

    <string name="profile_no_annotations_message">No annotations were found.</string>

    <string name="feed_empty_message">Nothing was found. Follow some annotators to view their annotations here.</string>

    <string name="annotation_recycler_go_to_annotation">Go to annotation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="annotation_input_error_source_invalid">Please provide a valid source.</string>
    <string name="annotation_input_checking_source">Checking validity of the source&#8230;</string>
</resources>
