<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/user_nav_home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_image_default"
            android:title="@string/user_nav_profile" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notification_icon"
            android:title="@string/user_nav_notifications" />
    </group>

    <group
        android:id="@+id/nav_group_settings"
        android:checkableBehavior="single">

        <item android:title="@string/user_nav_settings">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_account"
                        android:icon="@drawable/account_icon"
                        android:title="@string/user_nav_account" />

                    <item
                        android:id="@+id/nav_preferences"
                        android:icon="@drawable/preferences_icon"
                        android:title="@string/user_nav_preferences" />
                </group>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/nav_group_sign_out"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/sign_out_icon"
            android:title="@string/user_nav_sign_out" />
    </group>
</menu>
