<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".News.AnnotationInputFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/annotation_input_title_fact" />

            <ImageButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:layout_alignParentEnd="true"
                android:src="@drawable/x_dark"
                android:contentDescription="@string/annotation_input_close_image_description" />
        </RelativeLayout>

        <com.xw.repo.BubbleSeekBar
            android:id="@+id/value_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:bsb_bubble_color="@color/colorPrimary"
            app:bsb_bubble_text_color="@color/colorPrimary"
            app:bsb_max="50.0"
            app:bsb_min="-50"
            app:bsb_progress="0"
            app:bsb_second_track_color="@color/colorPrimary"
            app:bsb_track_color="@color/grey"
            app:bsb_auto_adjust_section_mark="true"
            app:bsb_hide_bubble="true"
            app:bsb_section_count="5"
            app:bsb_show_section_mark="true"
            app:bsb_show_section_text="false"
            app:bsb_touch_to_seek="true"
            app:bsb_section_text_color="@color/colorPrimary"
            app:bsb_section_text_position="below_section_mark" />

        <TextView
            android:id="@+id/quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/annotation_input_edit_text_hint"
            android:inputType="textLongMessage"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/annotation_input_source_hint"
            android:inputType="textLongMessage"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <CheckBox
            android:id="@+id/primary_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/annotation_input_primary_source_text" />

        <RelativeLayout
            android:id="@+id/progress_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            android:background="@drawable/rectangle_border_light"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_spinner"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:indeterminateTint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorPrimary"
                android:layout_toEndOf="@+id/progress_spinner"
                android:layout_centerVertical="true"
                android:id="@+id/progress_textview"
                android:text="@string/annotation_input_progress" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/error_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            android:background="@drawable/rectangle_border_light"
            android:visibility="gone">

            <ImageView
                android:id="@+id/error_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/error_icon_dark"
                android:contentDescription="@string/annotation_input_error_icon_description" />

            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorPrimary"
                android:layout_toEndOf="@+id/error_icon"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rectangle_border_light"
            android:textColor="@color/colorPrimary"
            android:text="@string/annotation_input_submit" />
    </LinearLayout>
</ScrollView>