<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".User.AccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <RelativeLayout
                android:layout_width="128dp"
                android:layout_height="128dp">

                <ProgressBar
                    android:id="@+id/profile_image_progress"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:indeterminateTint="@color/colorPrimary"
                    android:layout_centerInParent="true" />

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile_image_default"
                    android:background="@drawable/oval_border"
                    android:visibility="invisible"
                    android:contentDescription="@string/account_profile_image_description" />
            </RelativeLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textPersonName"
                android:hint="@string/account_name_hint"
                android:autofillHints="name" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textShortMessage"
                android:hint="@string/account_title_hint"
                android:autofillHints="name" />

            <RelativeLayout
                android:id="@+id/error_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:padding="16dp"
                android:background="@drawable/rectangle_border_light"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/error_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/error_icon_dark"
                    android:contentDescription="@string/sign_in_error_icon_description" />

                <TextView
                    android:id="@+id/error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_toEndOf="@+id/error_icon"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/progress_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:padding="16dp"
                android:background="@drawable/rectangle_border_light"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progress_spinner"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:indeterminateTint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/progress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_toEndOf="@+id/progress_spinner"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/rectangle_border_light"
                android:textColor="@color/colorPrimary"
                android:text="@string/account_submit_button"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>